--- a/System View Controllers/Info.plist
+++ b/System View Controllers/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Fotoğraflarınızı kaydedebilmek için izin istiyorum</string>
 </dict>
 </plist>
